# op_ocr_engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.py
models/: PP_LCNet_x0_25_textline_ori.param  PP_LCNet_x1_0_textline_ori.param  PP_OCRv5_mobile_det.param  PP_OCRv5_mobile_rec.param  ppocrv5_dict.txt
src/: main.cpp  ncnn_ocr_engine.cpp  ncnn_ocr_engine.h  ocr_engine.h  ocr_server.cpp  ocr_server.h
tests/: benchmark_ocr_server.py  visualize_ocr_bboxes.py
